test/conformance/chainsaw/autogen/foreach-jsonpatch/check-autogen.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ($test.metadata.name)
status:
  autogen: {}
