test/conformance/chainsaw/autogen/foreach-jsonpatch/policy-error.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ($test.metadata.name)
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
  autogen:
    rules:
    - name: autogen-require-non-root-user
    - name: autogen-cronjob-require-non-root-user
