test/conformance/chainsaw/autogen/foreach-jsonpatch/01-policy.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: policy
spec:
  try:
  - apply:
      file: policy.yaml
  - assert:
      file: policy-assert.yaml
  - error:
      file: policy-error.yaml
